modified  on getContent function

--- a/seleniumTesting.ipynb
+++ b/seleniumTesting.ipynb
@@ -10,56 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting selenium\n",
-      "  Downloading selenium-4.17.2-py3-none-any.whl.metadata (6.9 kB)\n",
-      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.0)\n",
-      "Collecting trio~=0.17 (from selenium)\n",
-      "  Downloading trio-0.24.0-py3-none-any.whl.metadata (4.9 kB)\n",
-      "Collecting trio-websocket~=0.9 (from selenium)\n",
-      "  Downloading trio_websocket-0.11.1-py3-none-any.whl.metadata (4.7 kB)\n",
-      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from selenium) (2024.2.2)\n",
-      "Requirement already satisfied: typing_extensions>=4.9.0 in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from selenium) (4.9.0)\n",
-      "Requirement already satisfied: attrs>=20.1.0 in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from trio~=0.17->selenium) (23.2.0)\n",
-      "Collecting sortedcontainers (from trio~=0.17->selenium)\n",
-      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
-      "Requirement already satisfied: idna in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from trio~=0.17->selenium) (3.6)\n",
-      "Collecting outcome (from trio~=0.17->selenium)\n",
-      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
-      "Collecting sniffio>=1.3.0 (from trio~=0.17->selenium)\n",
-      "  Using cached sniffio-1.3.0-py3-none-any.whl (10 kB)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from trio~=0.17->selenium) (1.16.0)\n",
-      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
-      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
-      "Collecting pysocks!=1.5.7,<2.0,>=1.5.6 (from urllib3[socks]<3,>=1.26->selenium)\n",
-      "  Downloading PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\kenne\\downloads\\module 3\\testing\\venv\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium)\n",
-      "  Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "Downloading selenium-4.17.2-py3-none-any.whl (9.9 MB)\n",
-      "   ---------------------------------------- 0.0/9.9 MB ? eta -:--:--\n",
-      "   --- ------------------------------------ 0.9/9.9 MB 19.4 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 3.4/9.9 MB 42.9 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 6.6/9.9 MB 47.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 8.4/9.9 MB 49.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 9.9/9.9 MB 45.3 MB/s eta 0:00:00\n",
-      "Downloading trio-0.24.0-py3-none-any.whl (460 kB)\n",
-      "   ---------------------------------------- 0.0/460.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 460.2/460.2 kB ? eta 0:00:00\n",
-      "Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
-      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
-      "Installing collected packages: sortedcontainers, sniffio, pysocks, outcome, h11, wsproto, trio, trio-websocket, selenium\n",
-      "Successfully installed h11-0.14.0 outcome-1.3.0.post0 pysocks-1.7.1 selenium-4.17.2 sniffio-1.3.0 sortedcontainers-2.4.0 trio-0.24.0 trio-websocket-0.11.1 wsproto-1.2.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install selenium\n",
     "!pip install google"
@@ -67,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,44 +29,68 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.common.exceptions import TimeoutException, NoSuchElementException\n",
+    "\n",
     "import pandas as pd\n",
-    "import time\n"
+    "import time\n",
+    "import traceback\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "OUTPUT_FILE = 'output.csv'\n",
+    "AUTHOR_MAX_WORDS = 3\n",
     "\n",
     "# Function for Getting Content from url\n",
     "def getContent(driver,url):\n",
-    "    driver.get(url)\n",
-    "    H1_elements = driver.find_elements(By.TAG_NAME, \"h1\")\n",
-    "    p_elements = driver.find_elements(By.TAG_NAME, \"p\")\n",
-    "    authors = ''\n",
-    "    copyright = ''\n",
-    "    paragraph = ''\n",
-    "    title = ''\n",
-    "    # Getting Title\n",
-    "    for h1 in H1_elements:\n",
-    "        title = h1.text\n",
-    "        break\n",
+    "    try:\n",
+    "        driver.get(url)\n",
+    "        H1_elements = driver.find_elements(By.TAG_NAME, \"h1\")\n",
+    "        p_elements = driver.find_elements(By.TAG_NAME, \"p\")\n",
+    "        authors = ''\n",
+    "        copyright = ''\n",
+    "        paragraph = ''\n",
+    "        title = ''\n",
+    "        # Getting Title\n",
+    "        for h1 in H1_elements:\n",
+    "            try:\n",
+    "                title = h1.text\n",
+    "                break  # Assuming you only need the first h1's text\n",
+    "            except Exception as e:\n",
+    "                print(\"Error accessing h1 text:\", e)\n",
+    "                continue\n",
     "\n",
-    "    # Getting Content\n",
-    "    for p in p_elements:\n",
-    "        # Fitler out authors\n",
-    "        value = p.text\n",
-    "        if value[:2] == 'By':\n",
-    "            authors = value.replace('By ', '') \n",
-    "            continue\n",
-    "        # Filter out Copyright\n",
-    "        if '©' in  value or 'All Rights Reserved' in value:\n",
-    "            copyright = value\n",
-    "            continue\n",
-    "        paragraph = paragraph + ''.join(value) + ' ' \n",
+    "        # Getting Content\n",
+    "        for p in p_elements:\n",
+    "            try:\n",
+    "                value = p.text\n",
+    "                # Filter out authors\n",
+    "                if value.startswith('By '):\n",
+    "                    authors = value.replace('By ', '') \n",
+    "                    words = authors.split()\n",
+    "                    if len(words) <= AUTHOR_MAX_WORDS and not authors:\n",
+    "                        authors = value\n",
+    "                        continue\n",
+    "                # Filter out Copyright\n",
+    "                if '©' in value or 'All Rights Reserved' in value:\n",
+    "                    copyright = value\n",
+    "                    continue\n",
+    "                paragraph += value + ' '\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error accessing paragraph text from {url}:\\n\", e)\n",
+    "                continue\n",
+    "    except TimeoutException:\n",
+    "        print(f\"Timeout waiting for elements on the page: {url}\")\n",
+    "    except NoSuchElementException:\n",
+    "        print(f\"An element was not found on the page: {url}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred with URL => {url}: {e}\")\n",
     "\n",
     "    return {'authors': authors, 'title' : title, 'content': paragraph, 'url' : url, 'copyright': copyright }\n",
     "\n",
@@ -353,10 +330,7 @@
     "i = 0\n",
     "for url in results:\n",
     "    #time.sleep(3)\n",
-    "    try:\n",
-    "        dataSet.append(getContent(driver,url))\n",
-    "    except:\n",
-    "        print(f\"error found in url =>{url}\")\n",
+    "    dataSet.append(getContent(driver,url))\n",
     "driver.close()\n",
     "df = pd.DataFrame(dataSet)\n",
     "df"
