--- a/seleniumTesting.ipynb
+++ b/seleniumTesting.ipynb
@@ -22,6 +22,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#from googlesearch import search_news\n",
     "from googlesearch import search\n",
@@ -31,7 +38,7 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.common.exceptions import TimeoutException, NoSuchElementException\n",
-    "\n",
+    "from urllib.parse import urlparse\n",
     "import pandas as pd\n",
     "import time\n",
     "import traceback\n"
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +65,10 @@
     "# Function for Getting Content from url\n",
     "def getContent(driver,url):\n",
     "    try:\n",
-    "        authors = ''\n",
+    "        parsed_url = urlparse(url)\n",
+    "\n",
+    "        authors = '' \n",
+    "        source_domain = parsed_url.netloc\n",
     "        copyright = ''\n",
     "        paragraph = ''\n",
     "        title = ''\n",
@@ -122,7 +132,7 @@
     "        authors = ''\n",
     "        print(f\"An unexpected error occurred with URL => {url}: {e}\")\n",
     "\n",
-    "    return {'authors': authors, 'date' : date, 'title' : title, 'content': paragraph, 'url' : url, 'copyright': copyright, 'readMoreUrl' : readMoreUrl }\n",
+    "    return {'authors': authors, 'date' : date, 'title' : title, 'content': paragraph, 'source_domain': source_domain, 'url' : url, 'copyright': copyright, 'readMoreUrl' : readMoreUrl }\n",
     "\n",
     "def save_to_csv_with_pandas(recordSet, filename):\n",
     "    # Convert the list of dictionaries to a DataFrame\n",
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,82 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scripting from => https://www.miamiherald.com/news/nation-world/national/article285641157.html\n",
-      "Scripting from => https://en.wikipedia.org/wiki/2020_United_States_presidential_election\n",
-      "Scripting from => https://www.aljazeera.com/news/2020/9/12/biden-battles-trump-lack-of-enthusiasm-among-black-voters\n",
-      "Scripting from => https://www.scientificamerican.com/article/trump-vs-biden-how-covid-19-will-affect-voting-for-president1/\n",
-      "Scripting from => https://www.bloomberg.com/features/2020-election-voter-profiles/\n",
-      "Scripting from => https://www.newyorker.com/news/campaign-chronicles/joe-bidens-effort-to-make-this-election-a-moral-referendum\n",
-      "Error accessing a text: Message: The element with the reference 6a638163-bfd3-4611-81fa-18b20030dba4 is stale; either its node document is not the active document, or it is no longer connected to the DOM; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception\n",
-      "Stacktrace:\n",
-      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
-      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:191:5\n",
-      "StaleElementReferenceError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:708:5\n",
-      "getKnownElement@chrome://remote/content/marionette/json.sys.mjs:401:11\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:259:20\n",
-      "cloneObject@chrome://remote/content/marionette/json.sys.mjs:59:24\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:289:16\n",
-      "json.deserialize@chrome://remote/content/marionette/json.sys.mjs:293:10\n",
-      "receiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:72:30\n",
-      "\n",
-      "Error accessing a text: Message: The element with the reference 832397d4-9a8b-4978-93de-d3223847f83d is stale; either its node document is not the active document, or it is no longer connected to the DOM; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception\n",
-      "Stacktrace:\n",
-      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
-      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:191:5\n",
-      "StaleElementReferenceError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:708:5\n",
-      "getKnownElement@chrome://remote/content/marionette/json.sys.mjs:401:11\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:259:20\n",
-      "cloneObject@chrome://remote/content/marionette/json.sys.mjs:59:24\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:289:16\n",
-      "json.deserialize@chrome://remote/content/marionette/json.sys.mjs:293:10\n",
-      "receiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:72:30\n",
-      "\n",
-      "Error accessing a text: Message: The element with the reference 9ec83f80-947b-40ea-96e2-439ad0faf5e0 is stale; either its node document is not the active document, or it is no longer connected to the DOM; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception\n",
-      "Stacktrace:\n",
-      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
-      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:191:5\n",
-      "StaleElementReferenceError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:708:5\n",
-      "getKnownElement@chrome://remote/content/marionette/json.sys.mjs:401:11\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:259:20\n",
-      "cloneObject@chrome://remote/content/marionette/json.sys.mjs:59:24\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:289:16\n",
-      "json.deserialize@chrome://remote/content/marionette/json.sys.mjs:293:10\n",
-      "receiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:72:30\n",
-      "\n",
-      "Error accessing a text: Message: The element with the reference 4001484a-d13f-4b25-871c-5090f05c239f is stale; either its node document is not the active document, or it is no longer connected to the DOM; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception\n",
-      "Stacktrace:\n",
-      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
-      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:191:5\n",
-      "StaleElementReferenceError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:708:5\n",
-      "getKnownElement@chrome://remote/content/marionette/json.sys.mjs:401:11\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:259:20\n",
-      "cloneObject@chrome://remote/content/marionette/json.sys.mjs:59:24\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:289:16\n",
-      "json.deserialize@chrome://remote/content/marionette/json.sys.mjs:293:10\n",
-      "receiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:72:30\n",
-      "\n",
-      "Error accessing paragraph text from https://www.newyorker.com/news/campaign-chronicles/joe-bidens-effort-to-make-this-election-a-moral-referendum:\n",
-      " Message: The element with the reference c8934d18-ec85-4e00-8d84-55f1547297b9 is stale; either its node document is not the active document, or it is no longer connected to the DOM; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception\n",
-      "Stacktrace:\n",
-      "RemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\n",
-      "WebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:191:5\n",
-      "StaleElementReferenceError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:708:5\n",
-      "getKnownElement@chrome://remote/content/marionette/json.sys.mjs:401:11\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:259:20\n",
-      "cloneObject@chrome://remote/content/marionette/json.sys.mjs:59:24\n",
-      "deserializeJSON@chrome://remote/content/marionette/json.sys.mjs:289:16\n",
-      "json.deserialize@chrome://remote/content/marionette/json.sys.mjs:293:10\n",
-      "receiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:72:30\n",
-      "\n",
-      "Scripting from => https://www.independent.co.uk/news/world/americas/us-politics/trump-poll-nikki-haley-south-carolina-primary-news-b2499080.html\n",
-      "Scripting from => https://wfxl.com/news/connect-to-congress/michigan-voters-upset-with-president-joe-bidens-support-for-israel-plan-will-vote-uncommitted-in-primary-listen-to-michigan-campaign-arab-americans-muslims-gaza-israel-benjamin-netanyahu-bibi-progressives-donald-trump-gretchen-whitmer-death-toll\n"
+      "Scripting from => https://www.voanews.com/a/7450337.html\n",
+      "Scripting from => https://www.usnews.com/news/top-news/articles/2024-01-22/fake-biden-robo-call-tells-new-hampshire-voters-to-stay-home\n",
+      "Scripting from => https://www.dailyherald.com/20240128/news/biden-didnt-tell-voters-not-to-vote/\n"
      ]
     }
    ],
