py version for WebScraper

--- a/Testing/Selenium.ipynb
+++ b/Testing/Selenium.ipynb
@@ -156,41 +156,6 @@
     "\n",
     "    return {'authors': authors, 'date' : date, 'title' : title, 'content': paragraph, 'source_domain': source_domain, 'url' : url, 'copyright': copyright } \n",
     "\n",
-    "def getPElementList(driver,url):\n",
-    "    try:\n",
-    "        parsed_url = urlparse(url)\n",
-    "\n",
-    "        authors = '' \n",
-    "        source_domain = parsed_url.netloc\n",
-    "        copyright = ''\n",
-    "        paragraph = ''\n",
-    "        title = ''\n",
-    "        readMoreUrl = ''\n",
-    "        date = ''\n",
-    "        driver.get(url)\n",
-    "        p_elements = driver.find_elements(By.TAG_NAME, \"p\")\n",
-    "\n",
-    "        # Getting Content\n",
-    "        for p in p_elements:\n",
-    "            try:\n",
-    "                value = p.text\n",
-    "                p_elementList.append({'p_element': value,'title' : title,  'source_domain': source_domain, 'url' : url, })\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error accessing paragraph text from {url}:\\n\", e)\n",
-    "                continue\n",
-    "    except TimeoutException:\n",
-    "        authors = ''\n",
-    "        print(f\"Timeout waiting for elements on the page: {url}\")\n",
-    "    except NoSuchElementException:\n",
-    "        authors = ''\n",
-    "        print(f\"An element was not found on the page: {url}\")\n",
-    "    except Exception as e:\n",
-    "        authors = ''\n",
-    "        print(f\"An unexpected error occurred with URL => {url}: {e}\")\n",
-    "\n",
-    "    return \n",
-    "\n",
     "def save_to_csv_with_pandas(recordSet, filename):\n",
     "    # Convert the list of dictionaries to a DataFrame\n",
     "    df = pd.DataFrame(recordSet)\n",
@@ -229,7 +194,7 @@
     "#queryString = 'Did Elon Musk say you can control a computer mouse with neuralink?'\n",
     "#queryString = 'Oprah winfrey weight loss gummies?'\n",
     "#queryString = 'Did Justin Trudeau say invest in Petro canada?'\n",
-    "#queryString = 'How to enter Jennifer Aniston MacBook giveaway?'"
+    "#queryString = 'How to enter Jennifer Aniston Macbook giveaway?'"
    ]
   },
   {
